Fixed line spacing and added registration widget to all speaker pages

--- a/themes/sunnyconf/stylesheets/home.css
+++ b/themes/sunnyconf/stylesheets/home.css
@@ -173,5 +173,8 @@ ul#menu {
 ul#menu li {
   font: bold 14px/1.25em helvetica, arial, sans-serif;
   padding-top: 5px;
-  line-height: 35px;
+}
+
+ul#menu li.logo {
+  padding: 10px 0 10px 0;
 }
